# deutsche-gesetze-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  entrypoint.sh
scripts/: update_laws.py
src/deutsche_gesetze_mcp/: config.py  db.py  downloader.py  log_config.py  models.py  parser.py  server.py
tests/: conftest.py  test_auth.py  test_db.py  test_downloader.py  test_parser.py  test_server.py
tests/fixtures/: sample_bgb.xml  sample_gg.xml  sample_toc.xml
