[project]
name = "deutsche-gesetze-mcp"
version = "0.1.0"
description = "MCP server for German law texts from gesetze-im-internet.de"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.0.2",
    "pydantic-settings==2.7.1",
    "httpx==0.28.1",
    "structlog==25.1.0",
    "lxml==5.3.1",
    "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.0.0",
    "respx==0.22.0",
    "ruff==0.9.7",
    "mypy==1.15.0",
    "lxml-stubs==0.5.1",
]

[project.scripts]
deutsche-gesetze-mcp = "deutsche_gesetze_mcp.server:main"
update-laws = "scripts.update_laws:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
